<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="0dp"
    android:minHeight="0dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TableLayout
        android:id="@+id/ButtonsTable"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center">

            <Button
                android:id="@+id/level1"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minWidth="120dp"
                android:text="@string/textLevel1" />

            <Button
                android:id="@+id/level2"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minWidth="120dp"
                android:text="@string/textLevel2" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center">

            <Button
                android:id="@+id/level3"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minWidth="120dp"
                android:text="@string/textLevel3" />

            <Button
                android:id="@+id/level4"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minWidth="120dp"
                android:text="@string/textLevel4" />

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="40dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="40dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/help1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/help1"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/help2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/help2"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/help3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/help3"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/help4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/help4"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/help5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help5"
            android:textAlignment="center"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>
